<resources>
    <string name="app_name">Gamma</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="interactions">Interactions</string>
    <string name="mentions">Mentions</string>
    <string name="stars">Stars</string>
    <string name="settings">Settings</string>
    <string name="conversations">Conversations</string>
    <string name="messages">Messages</string>
    <string name="chat_room">Chat Room</string>
    <string name="missed_conversations">Missed Conversations</string>
    <string name="newcomers">Newcomers</string>
    <string name="photos">Photos</string>
    <string name="trending">Trending</string>
    <string name="global">Global</string>
    <string name="compose_post">Compose post</string>
    <string name="post">Post</string>
    <string name="app_description">pnut.io client for android.</string>
    <string name="login_with_pnut">Login</string>
    <string name="loading_now">Loading…</string>
    <string name="files">Files</string>
    <string name="edit_profile">Edit profile</string>
    <string name="follow">Follow</string>
    <string name="following_with_name">\@%1$s\'s following</string>
    <string name="followers_with_name">\@%1$s\'s followers</string>
    <string name="since">Since: %s</string>
    <string name="follows_you">Follows you</string>
    <string name="its_me">It\'s me!</string>
    <string name="following">Following</string>
    <plurals name="follower">
        <item quantity="zero">%d\nFollowers</item>
        <item quantity="other">%d\nFollowers</item>
    </plurals>
    <string name="starred">Starred: %s</string>
    <plurals name="user">
        <item quantity="zero">%d users</item>
        <item quantity="one">%d user</item>
        <item quantity="other">%d users</item>
    </plurals>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="pref_header_account">Account</string>
    <string name="sign_up">Sign up</string>
    <string name="gallery">Gallery</string>
    <string name="markdown_link">[%1$s](%2$s)</string>
    <string name="action_template_text">%1$s by %2$s.</string>
    <string name="action_voted_by">Voted</string>
    <string name="action_followed_by">Followed</string>
    <string name="action_replied_by">Replied</string>
    <string name="action_starred_by">Starred</string>
    <string name="action_reposted_by">Reposted</string>
    <string name="icon_transition">icon_transition</string>
    <string name="fab_transition">fab_transition</string>
    <string name="remove_photo">Remove a photo</string>
    <string name="explore">Explore</string>
    <string name="profile_transition">profile_transition</string>
    <string name="timezone">Timezone</string>
    <string name="locale">Locale</string>
    <string name="save">Save</string>
    <string name="description_cover_picture">Set your cover picture</string>
    <string name="description_avatar_picture">Set your avatar picture</string>
    <string name="ratio_edit_cover">h,2:1</string>
    <string name="description_current_avatar_picture">Current your avatar</string>
    <string name="attach_photos">Attach photos</string>
    <string name="search">Search</string>
    <string name="posts">Posts</string>
    <string name="favorites">Favorites</string>
    <string name="send_a_message">Send a Message</string>
    <string name="block">Block</string>
    <string name="mute">Mute</string>
    <string name="share">Share</string>
    <string name="cannot_get_intent_data">Failed to get intent data</string>
    <string name="show_new_items">Show new items</string>
    <string name="file_date_format_template">yyyy/MM/dd HH:mm:ss</string>
    <string name="add">Add</string>
    <string name="upload">Upload</string>
    <string name="unfollow">Unfollow</string>
    <string name="unblock">Unblock</string>
    <string name="tag_stream_fragment_title_template">#%s</string>
    <string name="reply">Reply</string>
    <string name="star">Star</string>
    <string name="repost">Repost</string>
    <string name="unstar">Unstar</string>
    <string name="poll">Poll</string>
    <string name="spoiler">Spoiler</string>
    <string name="long_post">Long post</string>
    <string name="this_post_has_deleted">This post has deleted.</string>
    <string name="deleted_post_user_name">deleted post</string>
    <string name="posted">Posted: %s</string>
    <string name="reposted_by_template">reposted by @%s</string>
    <string name="date_short_seconds_template">%ds</string>
    <string name="date_short_minutes_template">%dm</string>
    <string name="date_short_hours_template">%dh</string>
    <string name="date_short_a_day">a day</string>
    <string name="date_short_date_this_year" formatted="false">%te %tb</string>
    <string name="date_short_date_before_last_year" formatted="false">%te %tb %ty</string>
    <string name="compose_reply_title_template">Reply to @%s</string>
    <string name="camera">Camera</string>
    <string name="library">Library</string>
    <string name="delete_repost">Delete repost</string>
    <string name="delete_post">Delete post</string>
    <string name="action_result_snackbar_template">%1$s: @%2$s: %3$s</string>
    <string name="no_items_template">No %s.</string>
    <string name="users">users</string>
    <string name="closed_poll">Closed poll: %s</string>
    <string name="thread">Thread</string>
    <string name="set_as_nsfw">Set as NSFW</string>
    <string name="add_an_account">Add an account</string>
    <string name="pref_account_header_title_key">pref_account_header_title_key</string>
    <string name="edit_image">Edit image</string>
    <string name="rotate_right">Rotate right</string>
    <string name="crop">Crop</string>
    <string name="this_operation_cannot_be_undone">This operation cannot be undone.</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="conversation_mark">conversation mark</string>
    <string name="show_nsfw_contents">Show NSFW contents</string>
    <string name="show_spoiler">Spoiler: %s</string>
    <string name="discard_changes">Discard changes?</string>
    <string name="discard">Discard</string>
    <string name="choose_a_image">Choose a image</string>
    <string name="undo">Undo</string>
    <string name="keyword_search">Keyword search</string>
    <string name="clear_text">Clear text</string>
    <string name="more">more</string>
    <plurals name="reply_count_template">
        <item quantity="zero">%d\nreplies</item>
        <item quantity="one">%d\nreply</item>
        <item quantity="other">%d\nreplies</item>
    </plurals>
    <plurals name="repost_count_template">
        <item quantity="zero">%d\nreposts</item>
        <item quantity="one">%d\nrepost</item>
        <item quantity="other">%d\nreposts</item>
    </plurals>
    <plurals name="star_count_template">
        <item quantity="zero">%d\nstars</item>
        <item quantity="one">%d\nstar</item>
        <item quantity="other">%d\nstars</item>
    </plurals>
    <string name="long_post_title_hint">Title(Optional)</string>
    <string name="long_post_body_hint">Body</string>
    <string name="remove">Remove</string>
    <string name="add_long_post">Add long post</string>
    <string name="show_long_post">Show long post</string>
    <string name="long_post_no_title">(No title)</string>
    <string name="topic">Topic</string>
    <string name="spoiler_alert">Spoiler alert</string>
    <string name="share_tag_stream_rss">Share tag stream RSS</string>
    <string name="share_user_posts_rss_url">Share user posts RSS</string>
    <string name="share_text">Share</string>
    <string name="share_url">Share URL</string>
    <string name="share_search_posts_rss_url">Share search posts RSS</string>
    <string name="advanced_options">Advanced options</string>
    <string name="revised">Revised</string>
    <string name="format_time">%tH:%tM:%tS</string>
    <string name="pref_general_header_title_key">pref_general_header_title_key</string>
    <string name="pref_license_key">pref_license_key</string>
    <string name="license">License</string>
    <string name="pref_header_general">General</string>
    <string name="pref_version_key">pref_version_key</string>
    <string name="gamma_version">Gamma version</string>
    <string name="cannot_load_file">Cannot load file</string>
    <string name="accounts">Accounts</string>
    <string name="account_not_found">Account not found</string>
    <string name="cannot_open_url">Cannot open URL.</string>
    <string name="change_theme_color">Change theme color</string>
    <string name="behavior_and_appearances">Behavior &amp; Appearances</string>
    <string name="default_text">Default</string>
    <string name="pref_dark_theme_key">pref_dark_theme_key2</string>
    <string name="use_dark_theme">Use dark theme</string>
    <string name="communication_error">Communication error</string>
    <string name="post_not_bookmarked">Post not bookmarked.</string>
    <string name="no_repost_found_to_delete">No repost found to delete.</string>
    <string name="avatar_over_size">Avatar must be less than 2MiB, with Content-Length specified.</string>
    <string name="denied_app_access">Resource owner denied your app access.</string>
    <string name="access_token_required">Access token required.</string>
    <string name="retry">Retry</string>
    <string name="end_of_list">End of list</string>
    <string name="load_more">Load more</string>
    <string name="appearances">Appearances</string>
    <string name="behavior">Behavior</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="avatar_swipe">Avatar swipe</string>
    <string name="avatar_swipe_desc">Control the post by swiping the post\'s avatar.</string>
    <string name="avatar_swipe_key">avatar_swipe</string>
    <string name="pref_stream_key">pref_stream</string>
    <string name="pref_stream_title">Stream</string>
    <string name="pref_loading">Loading</string>
    <string name="pref_loading_size_key">loading_size</string>
    <string name="pref_loading_size">Loading size</string>
    <string name="pref_loading_size_desc">The count of items to be loaded.</string>
    <string name="pref_auto_pager">Threshold of auto pager</string>
    <string name="pref_auto_pager_key">auto_pager</string>
    <string name="pref_auto_pager_desc">It will auto load when the count from last item to of
        viewing item below the configured number. Disable when set to 0.</string>
    <string name="each_stream">Each stream and other lists</string>
    <string name="pref_use_unified_stream_key">use_unified_stream</string>
    <string name="pref_use_unified_stream_summary_on">Include mentions in personal stream.</string>
    <string name="pref_use_unified_stream_summary_off">Not include mentions in personal stream.</string>
    <string name="pref_use_unified_stream_title">Use unified stream</string>
    <string name="pref_shape_of_avatar_title">Shape of avatar</string>
    <string name="pref_shape_of_avatar_key">shape_of_avatar</string>
    <string name="pref_shape_of_avatar_key_default_value">0</string>
    <string name="cache">Cache</string>
    <string name="pref_cache_title">Enable cache(Experimental)</string>
    <string name="pref_cache_key">cache</string>
    <string name="pref_cache_summary">Store list data every time fetch, and restore and show  next time.</string>
    <string name="pref_cache_size_key">cache_size</string>
    <string name="duration">Duration</string>
    <string name="max_options">Max options</string>
    <string name="anonymous">Anonymous</string>
    <string name="day">Day</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
</resources>