<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="@string/pref_behavior_appearance_key"
    android:title="@string/behavior_and_appearances">
    <PreferenceCategory android:title="@string/appearances">
        <DropDownPreference
            android:defaultValue="0"
            android:entries="@array/dark_mode"
            android:entryValues="@array/dark_mode_values"
            android:key="@string/pref_dark_theme_key"
            android:title="@string/use_dark_theme"
            app:useSimpleSummaryProvider="true" />
        <net.unsweets.gamma.presentation.view.ThemeColorPreference
            android:key="@string/pref_change_primary_color_key"
            android:title="@string/change_theme_color"
            app:widgetLayout="@layout/primary_color_preview" />
        <DropDownPreference
            app:defaultValue="@string/pref_shape_of_avatar_key_default_value"
            app:entries="@array/shape_of_avatar"
            app:entryValues="@array/shape_of_avatar_values"
            app:key="@string/pref_shape_of_avatar_key"
            app:title="@string/pref_shape_of_avatar_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/behavior">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:summary="@string/avatar_swipe_desc"
            app:key="@string/avatar_swipe_key"
            app:title="@string/avatar_swipe" />
    </PreferenceCategory>
</PreferenceScreen>