<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="@string/pref_stream_key"
    android:title="@string/pref_stream_title">
    <PreferenceCategory android:title="@string/pref_loading">
        <net.unsweets.gamma.presentation.view.SeekBarPreferenceMod
            app:title="@string/pref_loading_size"
            app:key="@string/pref_loading_size_key"
            app:defaultValue="@integer/pref_loading_size_default_value"
            app:min="10"
            android:max="200"
            app:adjustable="true"
            app:showSeekBarValue="true"
            app:summary="@string/pref_loading_size_desc"
            app:seekBarIncrement="@integer/pref_loading_size_step" />
        <net.unsweets.gamma.presentation.view.SeekBarPreferenceMod
            app:title="@string/pref_auto_pager"
            app:key="@string/pref_auto_pager_key"
            app:defaultValue="@integer/auto_pager_default_value"
            app:min="0"
            android:max="100"
            app:adjustable="true"
            app:showSeekBarValue="true"
            app:summary="@string/pref_auto_pager_desc"
            app:seekBarIncrement="@integer/pref_auto_pager_step" />
    </PreferenceCategory>
</PreferenceScreen>