<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ProgressBar
        android:id="@+id/loadingIndicatorProgressBar"
        style="@android:style/Widget.Material.ProgressBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_regular"
        android:layout_marginBottom="@dimen/margin_regular"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/noItemsMessageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_items_template"
        android:layout_marginTop="@dimen/margin_regular"
        android:layout_marginBottom="@dimen/margin_regular"
        android:textAlignment="center"
        android:visibility="gone"
        tools:text="No items."
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/retryButton"
        android:layout_width="match_parent"
        android:text="@string/retry"
        style="@style/TextButton.Square"
        android:layout_height="match_parent" />

    <ImageView
        android:layout_width="match_parent"
        android:src="@mipmap/ic_launcher_foreground"
        android:tint="@color/colorGrayLight"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/margin_regular"
        android:layout_marginBottom="@dimen/margin_regular"
        android:id="@+id/endOfListImageView"
        android:contentDescription="@string/end_of_list" />
</FrameLayout>